--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="yellow">
-<h1>Welcome to Azure App Service</h1>
+<h1>Welcome to Azure App Service - update 1</h1>
 <h2>This changes coming from GitHub</h2>
 <body>
 <html>
